# groundtruth-ai

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  mvp-implementation.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  research.md
.omo/: boulder.json
.sisyphus/: boulder.json
apps/sidecar/: AGENTS.md  config.py  database.py  main.py  models.py  package.json  pyproject.toml
apps/sidecar/api/: __init__.py
apps/sidecar/api/endpoints/: ai_config.py  auto_detect.py  classifications.py  compare.py  copilot.py  demo.py  documents.py  export.py  projects.py  search.py  setup.py  sheets.py  snapshots.py  takeoff.py  visual_search.py
apps/sidecar/services/: __init__.py  ai_router.py  computation.py  embeddings.py  export.py  formulas.py  ingestion.py  pdf_export.py  project_service.py  rag.py  sheet_metadata.py  text_extraction.py  vector_store.py  visual_search.py
apps/sidecar/tests/: test_ai_router.py  test_classifications_api.py  test_computation.py  test_export.py  test_formulas.py  test_ingestion.py  test_metadata.py  test_models.py  test_pdf_export.py  test_projects_api.py  test_rag.py  test_search.py  test_setup.py  test_sheets_api.py  test_snapshots_api.py  test_takeoff_api.py  test_text_extraction.py  test_visual_search.py
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: lib.rs  main.rs
docs/: INSTALL.md  OFFLINE_READINESS.md  UI_UX_IMPROVEMENTS.md  UX_IMPROVEMENTS.md
scripts/: AGENTS.md  bootstrap.ps1  bundle_sidecar.ps1  bundle_sidecar.sh  clean_state.ps1  release.ps1  setup_tesseract_resource.ps1  (+1 more)
(+106 files in other folders)
