[project]
name = "groundtruth-sidecar"
version = "0.1.0"
description = "Python FastAPI sidecar for GroundTruth Local MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "sqlmodel>=0.0.23",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.7.0",
    "PyMuPDF>=1.24.0",
    "python-multipart>=0.0.9",
    "pytesseract>=0.3.13",
    "Pillow>=10.0.0",
    "openpyxl>=3.1.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
